--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="https://dummyimage.com/500x500/1db954/ffffff.png&text=M" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta property="og:title" content="Feedify">
-  <meta property="og:image" content="https://raw.githubusercontent.com/adiXcodr/feedMyCourseBack/master/public/screenshots/pc1.png?2" />
-  <meta name="description" content="A Course Feedback Management System" />
-  <meta property="og:description" content="A Course Feedback Management System">
+  <meta property="og:title" content="Muvirep">
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/adiXcodr/feedMyCourseBack/master/public/screenshots/pc1.png?2" />
+  <meta name="description" content="An Open Source Video Repository" />
+  <meta property="og:description" content="An Open Source Video Repository">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Feedify</title>
+  <title>Muvirep</title>
 </head>
 
 <body>
